--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Welcome to My Blog</title>
+    <title>Welcome to Agora</title>
     <style>
         body {
             font-family: Georgia, 'Times New Roman', serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Blog</h1>
+        <h1>Agora</h1>
         <p>Sign up or Sign in to get started</p>
         <a href="{% url 'accounts:signup' %}" class="btn btn-signup">Sign Up</a>
         <a href="{% url 'accounts:signin' %}" class="btn btn-signin">Sign In</a>
