add google ownership verification token

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="google-site-verification" content="NyEfsvDt_1nxGZjznH2kWytsfDFcnyB_FOGvTesn7W0" />
     <title>Welcome to Agora</title>
     <style>
         body {
